--- a/responsive-layout-challenge/responsive-layout-a.html
+++ b/responsive-layout-challenge/responsive-layout-a.html
@@ -5,5 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <body>
-<!-- This file is for the first layout challenge -->
+<header>header</header>
+<section>
+  <div class="a">a</div>
+  <div class="b">b</div>
+  <div class="c">c</div>
+</section>
+<footer>footer</footer>
 </body>
